--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -16,19 +16,20 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install pnpm
+      - name: Install npm
         run: corepack enable
 
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'pnpm'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
+        working-directory: docs/zebra-axios-docs
 
       - name: Build Site
-        run: pnpm run build
+        run: npm run build
         working-directory: docs/zebra-axios-docs
 
       - name: Upload File via SCP
